--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,26 @@
 <html>
+    <head>
+        <title>
+            Article one | Sai Ram
+        </title>
+    </head>
+    <body>
+        <div>
+            Article one
+        </div>
+        <div>
+            Sep 3, 2017
+        </div>
+        <div>
+            <p>
+                This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
+            </p>
+            <p>
+                This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
+            </p>
+            <p>
+                This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
+            </p>
+        </div>
+    </body>
 </html>
