[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,9 @@
         <div>
             Article one
         </div>
+        <h3>
+            Artilcle one
+        </h3>
         <div>
             Sep 3, 2017
         </div>
