[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <div>
-            Article one
+            <a href='/'>Home</a>
         </div>
+        <hr/>
         <h3>
             Artilcle one
         </h3>
