[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -18,15 +18,13 @@
         </div>
         <div>
             <p>
-                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
+                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content
             </p>
             <p>
-                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
+                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content
             </p>
             <p>
-                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.This is the content.
-            </p>
-        </div>
+                    This is the content.This is the content.This is the content.This is the content.This is the content.This is the content
         </div>
     </body>
 </html>
