[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,19 +4,28 @@
             Article one | Sai Ram
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width= 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="container">
+            <div>
                 <a href='/'>Home</a>
-        </div>
+            </div>
             <hr/>
             <h3>
                 Artilcle one
             </h3>
-        <div>
+            <div>
                 Sep 3, 2017
-        </div>
-        <div>
+            </div>
+            <div>
             <p>
                     This is the content.This is the content.This is the content.This is the content.This is the content.This is the content
             </p>
@@ -25,6 +34,7 @@
             </p>
             <p>
                     This is the content.This is the content.This is the content.This is the content.This is the content.This is the content
+            </div>
         </div>
     </body>
 </html>
