[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! This is sai ram
 	    <h4> New heading </h4>	
         </div>
+        <script>
+            alert('Hi! I am a javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
