--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="/ui/sai ram prakash.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold" id="main-text">
