[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://www.facebook.com/photo.php?fbid=1190486474382374&set=a.110127302418302.14744.100002630996973&type=3&theater" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold" id="main-text">
