--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id = "madi" src="https://plus.google.com/u/0/me?tab=mX" class="img-medium"/>
+            <img id = "madi" src="https://plus.google.com/u/0/me?tab=mX.jpg" class="img-medium"/>
         </div>
         <br>
         <div id ="main-text" class="center text-big bold">
