--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+            <img id = "madi" src="https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiIgMDSro7WAhUFUrwKHQFzDiYQjRwIBw&url=https%3A%2F%2Fwarosu.org%2Fvr%2Fthread%2F1859978&psig=AFQjCNFzidId3aMMJDrHHm1bG30kxcacDA&ust=1504711863030442.jpg" class="img-medium"/>
         </div>
         <br>
         <div id ="main-text" class="center text-big bold">
