--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,17 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id ="main-text" class="center text-big bold">
-            Hi! I am your webapp.
+        <div class="container">
+            <div class="center">
+                <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <hr/>
+            <h3>
+                Personal
+            </h3>
+            <div>
+                i am sairam
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
