--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img id = "madi" src="/ui/sai ram prakash.jpg" class="img-medium"/>
+                <img id = "madi" src="/ui/sai.jpg" class="img-medium"/>
             </div>
             <hr/>
             <h3>
