--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,15 @@
             <div>
                 i am sairam
             </div>
+            <hr/>
+            <div>
+                <h3>
+                    Profession
+                </h3>
+            </div>
+            <div>
+                student
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
