--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,9 @@
             <div>
                 student
             </div>
+            <div class = "footer">
+                This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span>times.
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
